# MiniTasks_Desktop_App_CPP

./: .gitignore  CMakeLists.txt  FloatingButton.cpp  FloatingButton.h  LICENSE.txt  README.md  SidePanel.cpp  SidePanel.h  TaskItemWidget.cpp  TaskItemWidget.h  TaskPopup.cpp  TaskPopup.h  TaskStorage.cpp  TaskStorage.h  main.cpp
assets/: icon_generator.cpp
include/: AnalogClock.h  FloatingButton.h  SidePanel.h  TaskEditModal.h  TaskItemWidget.h  TaskPopup.h  TaskStorage.h
include/utils/: SmartParser.h
src/: AnalogClock.cpp  FloatingButton.cpp  SidePanel.cpp  TaskEditModal.cpp  TaskItemWidget.cpp  TaskPopup.cpp  TaskStorage.cpp
src/utils/: SmartParser.cpp
